Migrate all specimen table operations to use SpecimenSchema. Remove methods from StudySchema.